--- a/src/main/resources/assets/objects/lang/en_us.json
+++ b/src/main/resources/assets/objects/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.minja.general": "Minja",
   "item.objects.wand": "Wand",
-  "itemGroup.minja.general": "Minja"
+  "item.objects.grimoire": "Grimoire"
 }
