--- a/src/main/resources/assets/spells/lang/en_us.json
+++ b/src/main/resources/assets/spells/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "itemGroup.minja.general": "Minja",
-  "item.spells.lightningball": "Lightning Ball"
+  "item.spells.lightningball": "Lightning Ball",
+  "item.spells.spark": "Spark"
 }
