Ajout objet : Rhune (avec un h oui)

--- a/src/main/resources/assets/objects/lang/en_us.json
+++ b/src/main/resources/assets/objects/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.minja.general": "Minja",
   "item.objects.wand": "Wand",
-  "item.objects.grimoire": "Grimoire"
+  "item.objects.grimoire": "Grimoire",
+  "item.objects.rhune": "Rhune"
 }
