[WIP] Send event to server, remove clock from MouseEvent, add new spell, factorise code

--- a/src/main/resources/assets/spells/lang/en_us.json
+++ b/src/main/resources/assets/spells/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.minja.general": "Minja",
   "item.spells.lightningball": "Lightning Ball",
-  "item.spells.spark": "Spark"
+  "item.spells.spark": "Spark",
+  "item.spells.soul_spark": "Soul Spark"
 }
